# f1-penalties-tracker

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Untitled Diagram.drawio  architecture.drawio  go.work  go.work.sum  skills-lock.json
.claude/: settings.json
.claude/agents/: developer.md  product-owner.md  reviewer.md
.claude/scripts/: reviewer-app-token.sh
.github/workflows/: ci.yml
bins/ingest-cli/: Cargo.toml
bins/ingest-cli/src/: main.rs
bins/server/: Cargo.toml
bins/server/src/: main.rs
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: allowance.rs  fact.rs  lib.rs  sweep.rs
crates/extract/: Cargo.toml
crates/extract/src/: adapter.rs  cluster.rs  engine.rs  error.rs  glyph.rs  grid.rs  lib.rs
crates/extract/tests/: clustering.rs  fixture.rs  properties.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs
crates/pdf-fixtures/: Cargo.toml
crates/pdf-fixtures/fixtures/: README.md
crates/pdf-fixtures/src/: lib.rs
crates/store/: Cargo.toml
crates/store/src/: lib.rs
parser/: go.mod  main.go
scraper/: go.mod  main.go
